# MRM_VighneshReddy

./: README.md  gui.py
C++ Course 1/Module 1/: exercise3.cpp
C++ Course 1/Module 2/: exercise1.cpp  exercise2.cpp  exercise3.cpp  exercise4.cpp  exercise5.cpp
C++ Course 1/Module 4/: exercise1.cpp  exercise2.cpp  exercise3.cpp
C++ Course 2/Module 1/: exercise1.cpp  exercise3.cpp
C++ Course 2/Module 2/: exercise1.cpp
C++ Course 2/Module 3/: exercise4.cpp  exercise5.cpp
C++ Course 2/Module 4/: exercise1.cpp  exercise2.cpp
C++ Course 3/Module 1/: exercise2.cpp  exercise3.cpp
C++ Course 3/Module 3/: exercise1.cpp  exercise2.cpp  exercise3.cpp
C++ Courses/C++ Course 1/Module 1/: exercise1.cpp  exercise2.cpp  exercise4.cpp  exercise5.cpp
C++ Courses/C++ Course 1/Module 3/: exercise1.cpp  exercise2.cpp  exercise3.cpp  exercise4.cpp  exercise5.cpp
C++ Courses/C++ Course 1/Module 4/: exercise5.cpp
C++ Courses/C++ Course 2/Module 1/: exercise2.cpp  exercise4.cpp  exercise5.cpp
C++ Courses/C++ Course 2/Module 2/: exercise2.cpp
C++ Courses/C++ Course 2/Module 3/: exercise1.cpp  exercise2.cpp  exercise3.cpp
C++ Courses/C++ Course 2/Module 4/: exercise3.cpp  exercise4.cpp
C++ Courses/C++ Course 3/Module 1/: exercise1.cpp  exercise4.cpp  exercise5.cpp
C++ Courses/C++ Course 3/Module 2/: exercise1.cpp  exercise2.cpp  exercise3.cpp  exercise4.cpp  exercise5.cpp
C++ Courses/C++ Course 3/Module 3/: exercise4.cpp  exercise5.cpp
C++ Courses/C++ Course 3/Module 4/: exercise2.cpp  exercise3.cpp  exercise4.cpp  exercise5.cpp
CashierSystem_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
CashierSystem_ws/src/cashier_system/: CMakeLists.txt  package.xml
CashierSystem_ws/src/cashier_system/src/: bill_publisher.cpp  inventory_subscriber.cpp  status_printer.cpp
CashierSystem_ws/src/cashier_system/srv/: UpdateInventory.srv
CashierSystem_ws/src/install/: local_setup.sh  setup.sh
GitHub_task/: Task_1.md  Task_3.md  Task_4_5.md  helloworld.c
ML Courses/ML Course 1/: Deep Neural Network - Application.ipynb  Logistic_Regression_with_a_Neural_Network_mindset.ipynb  Planar_data_classification_with_one_hidden_layer.ipynb
ML Courses/ML Course 2/: Gradient_Checking.ipynb  Initialization.ipynb  Optimization_methods.ipynb  Regularization.ipynb  Tensorflow_introduction.ipynb
ML Courses/ML Course 4/: Autonomous_driving_application_Car_detection.ipynb  Convolution_model_Application.ipynb  Convolution_model_Step_by_Step_v1.ipynb  Face_Recognition.ipynb  Image_segmentation_Unet_v2.ipynb  Residual_Networks.ipynb  Transfer_learning_with_MobileNet_v1.ipynb
ML Tasks/: cifar10_cnn.ipynb  iris_ovr_logistic.ipynb  iris_softmax.ipynb  linear_regression.ipynb  linear_regression_housing.ipynb  logistic_wine.ipynb  mnist.ipynb
Machine Learning Course/: Building_your_Deep_Neural_Network_Step_by_Step.ipynb
OpenCV/: arrow.py  arrow_mask.py  aruco.py  aruco_distance.py  ball.py  ball_detection.py  camera_calibration.py  capture_calibration_images.py  panaroma.py  panorama2.py  sift.py
ROS_TASKS/GP/: README.md  navigation_node.cpp  robot.launch.py
ROS_TASKS/GP/ObstacleAvoidance/: ObstacleAvoidance  robot.launch.py
ROS_TASKS/PCL ObstacleAvoidance/: pointcloud_preprocessor_node.cpp
install/: local_setup.sh  setup.sh
install/cashier_system/share/cashier_system/: package.zsh
install/robot_position/lib/robot_position/: get_position
install/robot_position/share/robot_position/: package.bash  package.dsv  package.ps1  package.sh
log/: latest_build
rover_ws/: README.md  frames_2025-04-16_19.36.31.gv
rover_ws/install/: local_setup.sh  setup.sh
rover_ws/install/robot/share/robot/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
rover_ws/install/robot/share/robot/cmake/: robotConfig-version.cmake  robotConfig.cmake
rover_ws/install/robot/share/robot/config/: cartographer_2d.lua  cartographer_ros_config.yaml  nav2_params.yaml  octomap.yaml  rtabmap_config.yaml  rtabmap_launch.yaml  slam_toolbox_params.yaml
rover_ws/install/robot/share/robot/environment/: ament_prefix_path.dsv  path.dsv
rover_ws/install/robot/share/robot/launch/: cartographer.launch.py  display.launch.py  gazebo.launch.py  gps.launch.py  nav2_launch.py  octomap_launch.py  robot.launch.py  rtabmap.launch.py
rover_ws/install/robot/share/robot/rviz/: config.rviz  nav2_slam_config.rviz
rover_ws/install/robot/share/robot/urdf/: cam.xacro  gps.xacro  imu.xacro  inertial.xacro  lidar.xacro  material.xacro  robot.urdf.xacro  stereo.xacro
rover_ws/log/: latest_build
rover_ws/src/gazebo/: CMakeLists.txt
rover_ws/src/gazebo/launch/: gazebo_launch.py
rover_ws/src/gazebo/model/: rover.xacro
rover_ws/src/robot/: CMakeLists.txt  package.xml
rover_ws/src/robot/config/: cartographer_2d.lua  cartographer_ros_config.yaml  octomap.yaml  rtabmap.yaml  rtabmap_config.yaml  rtabmap_launch.yaml
rover_ws/src/robot/install/: local_setup.sh  setup.sh
rover_ws/src/robot/install/robot/share/robot/: package.sh
rover_ws/src/robot/install/robot/share/robot/launch/: robot.launch.py
rover_ws/src/robot/install/robot/share/robot/urdf/: cam.xacro  gps.xacro  imu.xacro  lidar.xacro  robot.urdf.xacro  stereo.xacro
rover_ws/src/robot/launch/: cartographer.launch.py  display.launch.py  gazebo.launch.py  nav2_launch.py  octomap_launch.py  robot.launch.py  rtabmap.launch.py
rover_ws/src/robot/log/: latest_build
rover_ws/src/robot/rviz/: config.rviz  nav2_slam_config.rviz
rover_ws/src/robot/src/: compass.cpp  gui.py  imu_calibrate.py  pcloa.cpp  relay_node.py
rover_ws/src/robot/urdf/: cam.xacro  imu.xacro  lidar.xacro  robot.urdf.xacro  stereo.xacro
rover_ws/src/robot/worlds/: marsyard2022.world
rover_ws/src/robot_position/: setup.cfg  setup.py
rover_ws/src/robot_position/robot_position/: get_position.py
rover_ws/src/rover_navigation/: CMakeLists.txt
rover_ws/src/rover_navigation/launch/: rover_navigation.launch.py
rover_ws/src/rover_navigation/src/: navigation_node.cpp
sensors/: calib  calib2  calibrated_imu  calibration.json
(+22 files in other folders)
