<?xml version="1.0"?>
<package format="3">
  <name>robot</name>
  <version>0.0.1</version>
  <description>Robot package for navigation, obstacle avoidance, and panorama creation with a compass overlay.</description>
  <maintainer email="vighneshreddysatti@gmail.com">Vighnesh Reddy</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>gazebo_ros</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>joint_state_publisher</build_depend>
  <build_depend>xacro</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>OpenCV</build_depend>
  <build_depend>slam_toolbox</build_depend>
  <build_depend>nav2_bringup</build_depend>
  <build_depend>cartographer_ros</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>ros2_control</build_depend>
  <build_depend>rtabmap_ros</build_depend>

  <!-- Exported build dependencies -->
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>robot_state_publisher</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_export_depend>rclcpp</build_export_depend>

  <!-- Runtime dependencies -->
  <exec_depend>launch</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>config</exec_depend>
  <exec_depend>rtabmap_ros</exec_depend>
  <exec_depend>worlds</exec_depend>
  <exec_depend>cartographer_ros</exec_depend>

  <!-- Testing dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Export section -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

